Chipper fully using Spirit item storage